# machine-learning-c

./: CMakeLists.txt
examples/: example_2_1.c  test_multi_arrays.c
include/: matrix.h  vector.h
src/: matrix.c  vector.c
src/core/: CMakeLists.txt  vector.c  vector.h
src/linear_algebra/: CMakeLists.txt
tests/: test_create_vector.c  test_vector.c
